<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/freeheart">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" >

        <CalendarView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendarView"
            android:layout_column="5" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" >
        <EditText
            android:id="@+id/txtBreakfast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/breakfast"
            android:layout_column="2"
            android:inputType="textShortMessage">
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/txtLunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Lunch"
            android:layout_column="2"
            android:inputType="textShortMessage">
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/txtDinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textShortMessage"
            android:hint="@string/Dinner" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/txtSnacks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Snacks"
            android:inputType="textShortMessage" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save2"
            android:id="@+id/SaveButton"
            android:layout_column="3" />
    </TableRow>

</TableLayout>
